# discordforge-py

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml  release.yml  test.yml  testpypi.yml
discordforge/: __init__.py  autoposter.py  client.py  errors.py  http.py  ratelimit.py  types.py
examples/: autoposter.py  bot.py  check_vote.py  error_handling.py  get_bot.py  post_stats.py  sync_commands.py  sync_commands_discordpy.py  vote_reward.py
src/discordforge/: __init__.py  async_client.py  client.py  exceptions.py  models.py
src/discordforge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_autoposter.py  test_client.py
